--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.304.0",
-    "next": "14.0.4",
+    "next": "14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
