--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tsparticles/engine": "^3.4.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.4.0",
     "@uploadthing/react": "^6.6.0",
     "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "^0.7.0",
