--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
+    "vaul": "^0.9.1",
     "zod": "^3.23.3"
   },
   "devDependencies": {
