--- a/package.json
+++ b/package.json
@@ -21,18 +21,16 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@sentry/nextjs": "8",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tsparticles/engine": "^3.4.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.4.0",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@uploadthing/react": "^6.6.0",
-    "@vercel/postgres": "^0.8.0",
+    "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
+    "drizzle-orm": "^0.32.1",
+    "effect": "^3.5.7",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "lucide-react": "^0.390.0",
+    "lucide-react": "^0.416.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
@@ -46,19 +44,19 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
+    "@types/eslint": "^9.6.0",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.21.4",
+    "drizzle-kit": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.2"
   },
