--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.11.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@uploadthing/react": "^6.6.0",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
@@ -58,7 +59,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.2"
+    "typescript": "5.4.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
