--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "effect": "^3.5.7",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "lucide-react": "^0.416.0",
-    "next": "^14.2.1",
+    "lucide-react": "^0.418.0",
+    "next": "14.1.3",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.0",
