--- a/package.json
+++ b/package.json
@@ -15,26 +15,30 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.4",
+    "@effect/schema": "^0.70.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@sentry/nextjs": "8",
     "@t3-oss/env-nextjs": "^0.11.0",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@types/probe-image-size": "^7.2.5",
     "@uploadthing/react": "^6.6.0",
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.1",
-    "effect": "^3.5.7",
+    "effect": "^3.6.0",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "lucide-react": "^0.418.0",
+    "lucide-react": "^0.424.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
+    "probe-image-size": "^7.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-photo-album": "^3.0.0",
