--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.1",
     "effect": "^3.6.0",
+    "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
     "lucide-react": "^0.424.0",
