--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "lint": "next lint",
     "start": "next start"
   },
@@ -31,12 +31,12 @@
     "@vercel/postgres": "^0.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.32.1",
+    "drizzle-orm": "^0.33.0",
     "effect": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "lucide-react": "^0.424.0",
+    "lucide-react": "^0.427.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
@@ -58,7 +58,7 @@
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.23.0",
+    "drizzle-kit": "^0.24.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
