--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.4",
-    "@effect/schema": "^0.70.1",
+    "@effect/schema": "^0.71.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@lucia-auth/adapter-drizzle": "^1.1.0",
+    "@node-rs/argon2": "^1.8.3",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -37,20 +40,24 @@
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.2.10",
     "geist": "^1.3.0",
-    "lucide-react": "^0.427.0",
+    "lucia": "^3.2.0",
+    "lucide-react": "^0.428.0",
     "next": "14.1.3",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "probe-image-size": "^7.2.3",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.52.2",
     "react-photo-album": "^3.0.0",
     "server-only": "^0.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.12.0",
     "vaul": "^0.9.1",
-    "zod": "^3.23.3"
+    "zod": "^3.23.8",
+    "zsa": "^0.6.0",
+    "zsa-react": "^0.2.2"
   },
   "devDependencies": {
     "@types/eslint": "^9.6.0",
